--- a/compose.yaml
+++ b/compose.yaml
@@ -24,6 +24,7 @@ services:
             DEBUG: ${DEBUG}
             DJANGO_LOGLEVEL: ${DJANGO_LOGLEVEL}
             DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
+            DJANGO_CSRF_TRUSTED_ORIGINS: ${DJANGO_CSRF_TRUSTED_ORIGINS}
             DATABASE_ENGINE: ${DATABASE_ENGINE}
             DATABASE_NAME: ${DATABASE_NAME}
             DATABASE_USERNAME: ${DATABASE_USERNAME}
